added text about doing grid search with the logistic model

--- a/Credit Card Fraud Classification.ipynb
+++ b/Credit Card Fraud Classification.ipynb
@@ -1809,7 +1809,10 @@
     "Evaluation metric: The metrics considered as candidates include precision, recall, and accuracy.\n",
     "However, the most appropruate in this case is deemed to be recall. This is because it is more useful that the model identifies(predicts correctly) which observations are actually fraudulent. Recall rate describes the proportion of actual fraudulent cases that the model is able to correctly identify. \n",
     "\n",
-    "That said, I think that a look at the precision rate also is worth it since it may give us a fair idea of the how many non-fraudulent observations may be classified by the model as \"fraudulent\". Knowing this will add more context to how much reliable the model is and also to help noot to misclassify non-fraudulent transactions as fraudulent ones.\n"
+    "That said, I think that a look at the precision rate also is worth it since it may give us a fair idea of the how many non-fraudulent observations may be classified by the model as \"fraudulent\". Knowing this will add more context to how much reliable the model is and also to help noot to misclassify non-fraudulent transactions as fraudulent ones.\n",
+    "\n",
+    "***MOdel Choice***\n",
+    "Ther logistic regression model is the best performing model with respect to the Recall. I then do a grid search on the logistic regression to fine tune the model and obtain a final model."
    ]
   },
   {
