added code for gridsearchcv on the logitic regression model

--- a/Credit Card Fraud Classification.ipynb
+++ b/Credit Card Fraud Classification.ipynb
@@ -1811,7 +1811,8 @@
     "\n",
     "That said, I think that a look at the precision rate also is worth it since it may give us a fair idea of the how many non-fraudulent observations may be classified by the model as \"fraudulent\". Knowing this will add more context to how much reliable the model is and also to help noot to misclassify non-fraudulent transactions as fraudulent ones.\n",
     "\n",
-    "***MOdel Choice***\n",
+    "***Model Choice:***\n",
+    "\n",
     "Ther logistic regression model is the best performing model with respect to the Recall. I then do a grid search on the logistic regression to fine tune the model and obtain a final model."
    ]
   },
@@ -1823,7 +1824,11 @@
     "### Logistic Regression\n",
     "|| Accuracy: 0.9421 || <----> ||Precision:0.9789||\n",
     "\n",
-    "The average **Recall** rate after cross validation is 87.86%. This means of the transactions that were actually fraudulent, the model predicts with 87.86% accuracy on average."
+    "The average **Recall** rate after cross validation is 87.86%. This means of the transactions that were actually fraudulent, the model predicts with 87.86% accuracy on average.\n",
+    "\n",
+    "After grid searching the parameter space (penalty, solver, C), we obtain the best parameters and fit a logistic model with cross validation.We obtain an average **Recall of 92.45%**.\n",
+    "\n",
+    "Note that i do the grid search, obtain the bets parameters and the come back to the logistic regression code chunk to rerun with the best parameters as the parameter arguments."
    ]
   },
   {
@@ -1853,7 +1858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 104,
    "id": "ee41e5fb-0370-4572-8c2d-117fd9317493",
    "metadata": {},
    "outputs": [
@@ -1861,8 +1866,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.9421052631578948\n",
-      "Precision: 97.89 %\n",
+      "Accuracy: 0.9368421052631579\n",
+      "Precision: 96.88 %\n",
       "Recall: 91.18 %\n"
      ]
     }
@@ -1870,7 +1875,7 @@
    "source": [
     "\n",
     "# fit the model\n",
-    "logistic_model = LogisticRegression(penalty = 'l1', solver = 'liblinear')\n",
+    "logistic_model = LogisticRegression(penalty = 'l1', solver = 'liblinear', C = 100, max_iter=1000)\n",
     "logistic_model.fit(X_train, y_train)\n",
     "\n",
     "# Predict the test set on the model\n",
@@ -1888,7 +1893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 107,
    "id": "e6477860-6637-4eb4-9858-144826d52fb7",
    "metadata": {},
    "outputs": [
@@ -1896,8 +1901,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Cross-Validation Scores: [0.90666667 0.85135135 0.7972973  0.90540541 0.93243243]\n",
-      "Average Recall: 0.8786306306306306\n"
+      "Cross-Validation Scores: [0.93333333 0.89189189 0.90540541 0.94594595 0.94594595]\n",
+      "Average Recall: 92.45 %\n"
      ]
     }
    ],
@@ -1906,7 +1911,98 @@
     "from sklearn.model_selection import cross_val_score\n",
     "cv_scores_logistic = cross_val_score(logistic_model, X_train, y_train, cv = 5, scoring = 'recall')\n",
     "print(\"Cross-Validation Scores:\", cv_scores_logistic)\n",
-    "print(\"Average Recall:\", cv_scores_logistic.mean())"
+    "print(\"Average Recall:\", round(cv_scores_logistic.mean()*100, 2), \"%\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "733004d0-1072-4f7a-89df-bf90672c9c48",
+   "metadata": {},
+   "source": [
+    "***Grid Search for Logistic Regression***"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "id": "d3d4eb76-40b9-47c5-b07a-75a33eac1e78",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 5 folds for each of 24 candidates, totalling 120 fits\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/homebrew/anaconda3/lib/python3.9/site-packages/sklearn/model_selection/_validation.py:378: FitFailedWarning: \n",
+      "30 fits failed out of a total of 120.\n",
+      "The score on these train-test partitions for these parameters will be set to nan.\n",
+      "If these failures are not expected, you can try to debug them by setting error_score='raise'.\n",
+      "\n",
+      "Below are more details about the failures:\n",
+      "--------------------------------------------------------------------------------\n",
+      "30 fits failed with the following error:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/opt/homebrew/anaconda3/lib/python3.9/site-packages/sklearn/model_selection/_validation.py\", line 686, in _fit_and_score\n",
+      "    estimator.fit(X_train, y_train, **fit_params)\n",
+      "  File \"/opt/homebrew/anaconda3/lib/python3.9/site-packages/sklearn/linear_model/_logistic.py\", line 1091, in fit\n",
+      "    solver = _check_solver(self.solver, self.penalty, self.dual)\n",
+      "  File \"/opt/homebrew/anaconda3/lib/python3.9/site-packages/sklearn/linear_model/_logistic.py\", line 61, in _check_solver\n",
+      "    raise ValueError(\n",
+      "ValueError: Solver newton-cg supports only 'l2' or 'none' penalties, got l1 penalty.\n",
+      "\n",
+      "  warnings.warn(some_fits_failed_message, FitFailedWarning)\n",
+      "/opt/homebrew/anaconda3/lib/python3.9/site-packages/sklearn/model_selection/_search.py:953: UserWarning: One or more of the test scores are non-finite: [0.                nan 0.16154955 0.29365766 0.                nan\n",
+      " 0.57682883 0.7089009  0.82479279        nan 0.76007207 0.77618018\n",
+      " 0.87863063        nan 0.83005405 0.83005405 0.90025225        nan\n",
+      " 0.87863063 0.87592793 0.9218018         nan 0.90025225 0.90295495]\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best Parameters: {'C': 100, 'penalty': 'l1', 'solver': 'liblinear'}\n",
+      "Best Score: 0.9218018018018018\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.model_selection import GridSearchCV\n",
+    "\n",
+    "# Define the hyperparameter grid\n",
+    "param_grid = {\n",
+    "    'penalty': ['l1', 'l2'],  # Penalty options: L1 (Lasso) and L2 (Ridge)\n",
+    "    'C': [0.001, 0.01, 0.1, 1, 10, 100],  # Regularization strength (C)\n",
+    "    'solver': ['liblinear', 'newton-cg']  # Solver options\n",
+    "}\n",
+    "\n",
+    "# Create a logistic regression model\n",
+    "logistic_regression = LogisticRegression(max_iter = 1000)\n",
+    "\n",
+    "# Create a GridSearchCV object\n",
+    "grid_search = GridSearchCV(\n",
+    "    estimator=logistic_regression,\n",
+    "    param_grid=param_grid,\n",
+    "    cv=5,  # Number of cross-validation folds\n",
+    "    scoring='recall',  # Evaluation metric\n",
+    "    verbose=1,  # Set to 1 for progress updates\n",
+    "    n_jobs=-1  # Use all available CPU cores for parallel processing,\n",
+    ")\n",
+    "\n",
+    "# Fit the grid search to your data\n",
+    "grid_search.fit(X_train, y_train)  # Replace X and y with your dataset\n",
+    "\n",
+    "# Print the best hyperparameters and the corresponding score\n",
+    "print(\"Best Parameters:\", grid_search.best_params_)\n",
+    "print(\"Best Score:\", grid_search.best_score_)\n"
    ]
   },
   {
